[package]
name = "load_balancer_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.82"
regex = "1.5.6"

# For testing purposes only
dashmap = "5.3.4"
